# kopi-code-challenge

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Makefile  PRE_COMMIT_SETUP_SUMMARY.md  README.md  adapters.py  attacks_test_suite.py  cases.py  dataset_security_api.csv  db.py  depends.py  docker-compose.yml  drivers.py  entities.py  init-db.sql  main.py  models.py  pyproject.toml  test_attacks.py
.github/workflows/: test-app.yml
app/: adapters.py  cases.py  configuration.py  db.py  depends.py  drivers.py  entities.py  errors.py  main.py  messages_adapters.py  proxy.py  utils.py
app/messages/: adapters.py  cases.py  drivers.py
app/proxy/: drivers.py  policy.py  proxy.py
test_security/: security_test_results_0.csv  security_test_results_1.csv  security_test_results_2.csv  security_test_results_3.csv
tests/: README.md  conftest.py  test_adapters.py  test_cases.py  test_main.py  test_messages_adapters.py  test_proxy.py
tests/messages/: test_adapters.py  test_cases.py  test_drivers.py
tests/proxy/: test_policy.py  test_proxy.py  test_proxy_drivers.py
